--- a/ReadWriteSendApp/ReadWriteSendApp/MainScreen/View/MainView.xib
+++ b/ReadWriteSendApp/ReadWriteSendApp/MainScreen/View/MainView.xib
@@ -40,6 +40,9 @@
                     <state key="normal" title="Write">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="writeButtonAction" destination="ref-hy-QPu" eventType="touchUpInside" id="NHw-SC-2aU"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L0R-Ds-OGt">
                     <rect key="frame" x="60" y="260" width="200" height="40"/>
@@ -51,6 +54,9 @@
                     <state key="normal" title="Send to email">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="sendToEmailButtonAction:" destination="ref-hy-QPu" eventType="touchUpInside" id="Fsf-eW-BYw"/>
+                    </connections>
                 </button>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wS9-q7-Jff">
                     <rect key="frame" x="20" y="470" width="280" height="78"/>
@@ -69,6 +75,9 @@
                     <state key="normal" title="Send to storage">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="sendToStorageButtonAction:" destination="ref-hy-QPu" eventType="touchUpInside" id="usn-t0-kIg"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rf3-Vj-mzY">
                     <rect key="frame" x="60" y="330" width="200" height="40"/>
@@ -80,6 +89,9 @@
                     <state key="normal" title="Read">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="readButtonAction:" destination="ref-hy-QPu" eventType="touchUpInside" id="d8k-zB-Ap1"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="bwZ-j6-gJT"/>
